--- a/Renderer/gadgets/twitter_list.html
+++ b/Renderer/gadgets/twitter_list.html
@@ -26,36 +26,33 @@ if(!window.twttr){window.twttr={}}(function(){twttr.txt={};twttr.txt.regexen={};
 
 
 parameters = getUrlVars(); //which leads to:
-ids= parameters['ids'].replace('%22','')
-console.log(ids); //Writes 'value1' to console
-
+console.log(parameters['ids']); //Writes 'value1' to console
 
 new TWTR.Widget({
   version: 2,
-  type: 'search',
-  search: ids,
+  type: 'list',
+  rpp: 30,
   interval: 30000,
-  title: ids,
-  subject: 'Across the sky',
+  title: 'Everything we do at',
+  subject: 'the twoffice',
   width: 250,
   height: 300,
   theme: {
     shell: {
-      background: '#8ec1da',
+      background: '#ff96e7',
       color: '#ffffff'
     },
     tweets: {
       background: '#ffffff',
       color: '#444444',
-      links: '#1985b5'
+      links: '#b740c2'
     }
-    
   },
   features: {
-    scrollbar: false,
-    loop: true,
+    scrollbar: true,
+    loop: false,
     live: true,
-    behavior: 'default'
+    behavior: 'all'
   }
-}).render().start();
+}).render().setList('twitter', 'd9').start();
 </script>
