--- a/Renderer/sendw.html
+++ b/Renderer/sendw.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
    <head>
- <script src="cdb-studio.js" ></script>
- <script src="sockets.js" type="text/javascript"></script>
+ <script src="js/cdb-studio.js" ></script>
+ <script src="js/sockets.js" type="text/javascript"></script>
 </head>
 <body>
       <h1>Autobahn WebSocket Echo Test</h1>
       <noscript>You must enable JavaScript</noscript>
       <form>
-         <p>Message: <input id="message" type="text" size="50" maxlength="5000" value="Hello, world!"></p>
+         <p>Message: <input id="message" type="text" size="50" maxlength="500000" value="Hello, world!"></p>
       </form>
       <button onclick='send();'>Send Message</button>
+      <button onclick='sendTwitter();'>Send twitter Message</button>
       <pre id="log" style="height: 20em; overflow-y: scroll; background-color: #faa;"></pre>
    </body>
 
