- renderer_test.html contains most of the code - contentProvider: 	- creates a single connection to the websocket server. More efficient - testPublisher publishes every second. Testing purposes
TODO:
- add error handling for can not con net to server
     - try to connect every 5 seconds
- Renderer:
     - add remove ids method which removes the widgets not needed anymore

--- a/Renderer/gadgets/flickr_tags.html
+++ b/Renderer/gadgets/flickr_tags.html
@@ -27,7 +27,7 @@ function getUrlVars() { // Read a page's GET URL variables and return them as an
 
 parameters = getUrlVars(); //which leads to:
 ids= parameters['ids'].replace('%22','')
-console.log(parameters['ids']); //Writes 'value1' to console
+console.log(ids); //Writes 'value1' to console
 
 function onload()
 {
