--- a/Renderer/renderer_test.html
+++ b/Renderer/renderer_test.html
@@ -1,21 +1,73 @@
 <!DOCTYPE html>
 <html>
    <head>
-   	<script src="js/render.js" type="text/javascript"> </script>
  <script src="js/cdb-studio.js" ></script>
  <script src="js/sockets.js" type="text/javascript"></script>
  <script src="js/easeljs-0.4.2.min.js" type="text/javascript"></script>
+ <script type="text/javascript">
+ var _nextX=0;
+ var _nextY=0;
+  
+ function updateXY(width,height)
+ {
+ 	MAX_X = window.screen.width;
+ 	MAX_Y = window.screen.height;
+ 	
+ 	
+ 	if(_nextX + width >MAX_X)
+ 	{
+ 		_nextX=0;
+ 		_nextY= _nextY+height;
+ 	}else
+ 	{
+ 		_nextX = _nextX+width;
+ 	}
+ 	console.log(_nextX + ":" + _nextY);
+ }
+ function init(id, width, height)
+ {
+ 	var currentX = _nextX;
+ 	var currentY= _nextY;
+ 	
+ 	var framewidth = width + 5;
+ 	var frameheight = height + 5;
+	
+  	updateXY(width,height);
+ 	
+     canvas = document.getElementById("testCanvas");
+		stage = new Stage(canvas);
+
+		var container = new Container();
+		stage.addChild(container);
+		
+		console.log("id:"+id);
+		
+		var content = new DOMElement(id);
+		content.regX = 5;
+		content.regY = 5;
+		//content.visible = false;
+
+		var o = content.clone();
+		stage.addChild(o);
+
+		container.addChild(content);
+		container.x = currentX+5; container.y = currentY+5;
+		//container.alpha = 0.6;
+		//container.rotation = 25;
+		//container.scaleX = 1.5;
+		//container.visible = false;
+
+		stage.update();
+ }
+ </script>
+ 
 </head>
- <body onload="init()">
+ <body>
   
       <noscript>You must enable JavaScript</noscript>
-
-  <div class="canvasHolder">
-		<div id="e" style="z-index: 1; position: absolute; background-color: #FF0000; width:320px; height:260px; padding: 5px; visibility: hidden;">
-			<b>Hello! I'm an HTML div.</b><br/><br/>
-			I am not rendered to the canvas, but I can be included in the display list for positioning and transformations.<br/><br/>
-			This means I can contain any HTML content (rich text, forms, video, etc), but I'm not a full part of the EaselJS display list.<br/><br/>
-			<a href="http://easeljs.com/">This is a link</a>
+ 
+    <div class="canvasHolder">
+		<div id="e" style="z-index: 1; position: absolute; background-color:black; padding: 5px; visibility: hidden;">
 		</div>
 		<canvas id="testCanvas" width="960" height="300"></canvas>
 	</div>
