- Created Renderer controller class for controlling the renderer - renderer can now add and remove specific div elements - modified code in other files to suit this - added new jquery js file

--- a/Renderer/gadgets/flickr_tags.html
+++ b/Renderer/gadgets/flickr_tags.html
@@ -1,5 +1,5 @@
 <html>
-<head><script type="text/javascript" src="../js/cdb-studio.js">
+<head><script type="text/javascript" src="../js/jquery-1.7.2.min.js">
    </script>
 <script>
 /*
