--- a/Renderer/renderer_test.html
+++ b/Renderer/renderer_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
- <script src="js/cdb-studio.js" ></script>
+ <script src="js/jquery-1.7.2.min.js" ></script>
  <script src="js/sockets.js" type="text/javascript"></script>
  <script src="js/easeljs-0.4.2.min.js" type="text/javascript"></script>
  
